# cis-194-winter-2016

./: .gitignore  .travis.yml  LectureNotes.hs  README.md  cis194.cabal  scratch.hs  stack.yaml
src/Homework/: Week1.hs
src/Homework/Week01/: Assignment.hs
src/Homework/Week02/: Assignment.hs  Log.hs
src/Homework/Week03/: Assignment.hs
src/Homework/Week04/: Assignment.hs
src/Homework/Week05/: Assignment.hs  StackVM.hs
src/Homework/Week06/: Assignment.hs
src/Homework/Week07/: Assignment.hs
src/Homework/Week08/: Assignment.hs  notes.txt
src/Homework/Week09/: AParser.hs  Assignment.hs
src/Homework/Week1/: Assignment.hs
src/Homework/Week10/: AParser.hs  Assignment.hs
src/Homework/Week11/: Assignment.hs  Reference.hs  Types.hs
src/Homework/Week12/: BST.hs  Ring.hs
src/Homework/Week2/: Assignment.hs  Log.hs  LogAnalysis.hs
src/Homework/Week3/: Assignment.hs
src/Homework/Week4/: Assignment.hs  BST.hs
src/Homework/Week5/: Assignment.hs  ExprT.hs  Parser.hs  StackVM.hs
src/Homework/Week6/: Assignment.hs
src/Homework/Week7/: Assignment.hs
src/Homework/Week9/: AParser.hs  Assignment.hs
test/: CourseProgressRunner.hs  Main.hs  Spec.hs
test/Data/String/: StripSpec.hs
test/Homework/: Week01Spec.hs  Week02Spec.hs  Week03Spec.hs  Week04Spec.hs  Week05Spec.hs  Week06Spec.hs  Week07Spec.hs  Week08Spec.hs  Week09Spec.hs  Week10Spec.hs  Week11Spec.hs  Week12Spec.hs  Week1Spec.hs  Week2Spec.hs  Week3Spec.hs  Week4Spec.hs  Week5Spec.hs  Week6Spec.hs  Week7Spec.hs  Week9Spec.hs
