name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            http://github.com/laser/cis194#readme
license:             MIT
license-file:        LICENSE
author:              Erin Swenson-Healey
maintainer:          eswenson-healey@cj.com
copyright:           2010 Author Here
category:            Educational
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Homework.Week1
                     , Homework.Week2.Log
                     , Homework.Week2.LogAnalysis
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , cis194
                     , hspec
                     , unordered-containers
                     , time
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/laser/cis-194-winter-2016
